[project]
name = "FedRAMP Marketplace API"
version = "0.1.0"
description = "A simple API application for FedRAMP Marketplace information."

readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
dependencies = "requirements.txt"

[project.optional-dependencies]
dev-requirements = {file = "dev-requirements.txt"}
